fix header alignement

--- a/client/styles/orders.less
+++ b/client/styles/orders.less
@@ -4,7 +4,7 @@
 	width: 100%;
 	position: absolute;
 	top: 15%;
-	header {
+	header.offers {
 		text-align: center;
 	}
 	.orders {
